test/official_tests/function/missing_comma_in_parameters.lox
// error: {"line":3,"message":"Expect ')' after parameters","type":"ParseError"}
// [c line 4] Error at end: Expect '}' after block.
fun foo(a, b c, d, e, f) {}
